configs/elk/es/elasticsearch-ss.yaml

# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    k8s-app: elasticsearch
    version: v7.9.3
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: elasticsearch
      version: v7.9.3
  template:
    metadata:
      labels:
        k8s-app: elasticsearch
        version: v7.9.3
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: es-cluster
      containers:
      - image: elasticsearch:7.9.3
        name: elasticsearch
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: elasticsearch
          mountPath: /data
      volumes:
      - name: elasticsearch
        emptyDir: {}
      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    k8s-app: elasticsearch
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
spec:
  type: NodePort  # allow access via nodeport while setting up
  ports:
  - port: 9200
    protocol: TCP
    targetPort: 9200
    nodePort: 31336  # This should be removed when no longer using nodeport (e.g., ingress is set up)
  selector:
    k8s-app: elasticsearch
  publishNotReadyAddresses: true
