configs/elk/es/ingress-elasticsearch.yaml
# Ingress for elasticsearch http api. 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cloudberry.elastic  # Note, this hostname must resolve via DNS or your /etc/hosts to a node in the cluster. 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: elasticsearch-logging
              port:
                number: 9200
